[b]Version 0.6.8[/b]:

(2009-04-23)
 * Started to implement the possibility to customize the options for the
   audio/video filters passed to mplayer (in the section [filter_options] 
   in smplayer.ini).
   Currently 3 filters can be customized: noise, volnorm and deblock.
   BTW, the volnorm filter has changed its default value from 2 to 1.

(2009-04-20)
 * (Experimental) Added the new option "Global volume" (Preferences -> General
   -> Audio). If the option is checked, the volume and mute are global
   options. If not checked, the volume and mute options are independent for
   each file.
   Known issues: the default value is 50, it doesn't honor the "default volume"
   setting. On the other hand, the option "change volume before playing" is
   honored even if that option is shown disabled when the "global volume" is
   checked.

(2009-04-18)
 * Added the Vietnamese translation, by Lê Xuân Thảo <thaolx@gmail.com>.
 * Display the current playback speed in the status bar when it changes.
 * Added support for the mplayer tags DVDNAV_TITLE_IS_MENU and 
   DVDNAV_TITLE_IS_MOVIE added in mplayer svn r29156. 
   It just simply stops sending the set_mouse_pos slave command if not in a 
   dvd menu.

(2009-04-16)
 * (Bugfix) Don't stop the file if already stopped when closing smplayer
   to prevent that the current position would reset to 0.

(2009-04-15)
 * Added two aspect ratios: 3:2 and 14:10.
 * The next_aspect action changes the aspect ratio in the right order.

(2009-04-07)
 * Added an option in preferences to turn on/off the screenshot feature.
   So no need now to clear the screenshot path to disable it.

(2009-04-06)
 * Pass to mplayer "-vc ffh264vdpau,ffmpeg12vdpau,ffwmv3vdpau,ffvc1vdpau," if
   using vdpau as video driver and not other video codec has been set.
   (Untested)

(2009-04-02)
 * Now the mouse cursor is hidden only when playing.

(2009-04-01)
 * (Fix) The preferences dialog sets the default video driver to "direct3d,"
   if using Windows Vista.
